updated express server

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -14,7 +14,7 @@
   </header>
   <main style="margin: 1em;">
     <h3>Shorten your URL here</h3>
-    <a href = "#">Click here</a>
+    <a href = "urls/new">Click here</a>
     <h3>My URLs</h3>
     <table class="table">
       <thead>
