--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,13 +1,27 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <form class="form-inline" action="/login" method="POST">
+          <% if (username === undefined) { %>
+          <label for="username"
+            style="display: inline-block; width: 100px; text-align:center; color:white">Username</label>
+          <input type="text" value="<%= username %>" name="username"> <button type="submit" class="btn btn-primary"
+            style="margin-left: 10px">Sign
+            in</button>
+          <% } else {%>
+          <label for="logout"
+            style="display: inline-block; width: 100px; text-align:center; color:white"><%= username %></label>
+             <button type="submit" name = "logout" class="btn btn-primary" style="margin-left: px">Logout</button>
+          <% } %>
+        </form>
       </div>
     </div>
   </nav>
