--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,19 +9,21 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <% if (username === undefined) { %>
         <form class="form-inline" action="/login" method="POST">
-          <% if (username === undefined) { %>
           <label for="username"
             style="display: inline-block; width: 100px; text-align:center; color:white">Username</label>
           <input type="text" value="<%= username %>" name="username"> <button type="submit" class="btn btn-primary"
             style="margin-left: 10px">Sign
             in</button>
-          <% } else {%>
-          <label for="logout"
-            style="display: inline-block; width: 100px; text-align:center; color:white"><%= username %></label>
-             <button type="submit" name = "logout" class="btn btn-primary" style="margin-left: px">Logout</button>
-          <% } %>
         </form>
+        <% } else {%>
+          <form class="form-inline" action="/logout" method="POST">
+        <label for="logout"
+          style="display: inline-block; width: 170px; text-align:center; color:white"> Logged in As: <%= username %></label>
+        <button type="submit" name="logout" class="btn btn-primary" style="margin-left: 1px">Logout</button>
+          </form>
+        <% } %>
       </div>
     </div>
   </nav>
