implemented the registration system and partially revamped the login system

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,18 +9,18 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <% if (username === undefined) { %>
-        <form class="form-inline" action="/login" method="POST">
-          <label for="username"
+        <% if (user === undefined) { %>
+        <form class="form-inline" action="/login" method="GET">
+          <label for="user"
             style="display: inline-block; width: 100px; text-align:center; color:white">Username</label>
-          <input type="text" value="<%= username %>" name="username"> <button type="submit" class="btn btn-primary"
+          <input type="text" value="<%= user %>" name="user"> <button type="submit" class="btn btn-primary"
             style="margin-left: 10px">Sign
             in</button>
         </form>
         <% } else {%>
           <form class="form-inline" action="/logout" method="POST">
         <label for="logout"
-          style="display: inline-block; width: 170px; text-align:center; color:white"> Logged in As: <%= username %></label>
+          style="display: inline-block; width: 170px; text-align:center; color:white"> Logged in As: <%= user.email %></label>
         <button type="submit" name="logout" class="btn btn-primary" style="margin-left: 1px">Logout</button>
           </form>
         <% } %>
