--- a/views/url_login.ejs
+++ b/views/url_login.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-      <% include ./partials/_header %>
+    <% include ./partials/_header %>
   </header>
   <div style = "width: 25rem; height: 30rem; margin: 5rem auto; padding: 50px; border: lightgrey solid 1px">
   <main style="margin: 1em;">
@@ -26,7 +26,7 @@
         <input type="password" placeholder="Enter Password" name="password" required>
         <hr>
   
-        <button type="submit">Register</button>
+        <button type="submit">Login</button>
       </div>
     </form>
   </div>
