added more login/registration functionality and encrypted passwords

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,6 +13,7 @@
     <% include ./partials/_header %>
   </header>
   <main style="margin: 1em;">
+
     <h3>Shorten your URL here</h3>
     <a href = "urls/new">Click here</a>
     <h3>My URLs</h3>
@@ -26,11 +27,13 @@
         </tr>
       </thead>
       <tbody>
-          
+          <% if (user === undefined) { %>
+            <script>alert("Please login or register first");</script>
+            <% } %>
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url]["longURL"] %></td>
             <td> <form method="GET" action="/urls/<%= url %>">
               <button type = "submit" class="btn btn-outline-primary" id = "<%= url %>">Edit</button> 
               </form>
@@ -44,6 +47,7 @@
         <% } %>
       </tbody>
     </table>
+
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
