--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,24 +1,31 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
+
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+      </div>
+
         <% if (user === undefined) { %>
-          <a class="nav-item nav-link" href="/login">Login</a>
-          <a class="nav-item nav-link" href="/register">Register</a>
-        </div>
+          <div class = "navbar-nav">
+            <form class="form-inline" >
+                <a class="nav-item nav-link" href="/login">Login</a>
+                <a class="nav-item nav-link" href="/register">Register</a>
+            </form>
+
         <% } else {%>
         <form class="form-inline" action="/logout" method="POST">
           <label for="logout" style="display: inline-block; width: 170px; text-align:center; color:white"> Logged in As:
             <%= user.email %></label>
           <button type="submit" name="logout" class="btn btn-primary" style="margin-left: 1px">Logout</button>
         </form>
+      </div>
         <% } %>
       </div>
     </div>
